--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" style="color:red;background-color: blue;">   hello
+        <p>123{{address}}</p>
+        
+    </div>
+    <!-- <span>{{name}}</span> -->
     <script src="/dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
