--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         })
         vm._data.user='zhangsan'
         vm._data.arr.push(2)
-        console.log(vm._data.arr);
+        console.log(vm.arr,'------------');
         console.log(vm);
     </script>
 </body>
