--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app" style="color:red;background-color: blue;">   {{age}}
+    <div id="app" style="color:red;background-color: blue;">   {{user}}
         
         
     </div>
@@ -18,7 +18,7 @@
             el: '#app',
             data(){
                 return {
-                    // user:'zxy',
+                    user:'zxy',
                     // address:{
                     //     number:99,
                     //     block:'gangtie'
@@ -27,7 +27,8 @@
 
                     age:{
                         age:100
-                    }
+                    },
+
                 }
             },
             // watch(){},
