feat: 更新节点子元素比对、前后插入以及头移尾尾移头优化

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <div id="app" style="color:red;background-color: blue;">   
+    <div id="app" >   
         {{user}}
         
         <p></p>
@@ -43,7 +43,7 @@
                             template:'<div>456我是局部<aa></aa>组件</div>',
                             components: {
                                 'aa':{
-                                    template:'<p>我傻了</p>'
+                                    template:'<p>我</p>'
                                 }
                             }
                         }
